# error-state-kalman-filter

./: .gitignore
.cache/clangd/index/: DataLoader.cpp.16F638942D63AEAE.idx  DataLoader.hpp.BCB3989D666E1962.idx  ESKF.cpp.11B067CC9E303300.idx  ESKF.hpp.55FAC0D33C80AED8.idx  IEKF.cpp.1993B84C56309BEB.idx  IEKF.hpp.2767011E64DB79D9.idx  eskf_deepseek.cpp.04F5510963AF3D27.idx  eskf_example.cpp.0E805E7A675420EE.idx  iekf_example.cpp.44C337F6B3B689B2.idx  test_iekf.cpp.51557BE2CDE73011.idx  test_utils.cpp.65AFE7647BCF167A.idx  utils.cpp.95E756585D10EE59.idx  utils.hpp.F5BE9D0F7E7413BB.idx
inekf/: CMakeHeader.cmake  CMakeLists.txt
inekf/include/: IEKF.hpp  eskf.hpp  eskf_lie.hpp  utils.hpp
inekf/src/: IEKF.cpp  eskf.cpp  eskf_deepseek.cpp  eskf_lie.cpp  eskf_lie_example.cpp
inekf/tmp_code/: CMakeLists.txt  ESKF.cpp  ESKF.hpp  eskf_example.cpp  math_utils.cpp  math_utils.hpp
scripts/: cen_limit.ipynb  display_path.py  fake_data_test_inekf.m  fake_data_test_plot.m  zurich_test_inekf.m  zurich_test_plot.m
scripts/filters/: EKF.m
scripts/helper/: icp.m  lla2ecef.m  loadGroundTruthAGL.m  loadPoseGPS.m  unscented_transform.m
tmp_code/: ESKF.cpp  ESKF.hpp  eskf_example.cpp
